--- a/package.json
+++ b/package.json
@@ -8,8 +8,9 @@
     "start": "node server.js"
   },
   "dependencies": {
-    "express": "^5.1.0",
-    "node-fetch": "^3.3.2"
+  "express": "^5.1.0",
+  "node-fetch": "^3.3.2",
+  "tweetnacl": "^1.0.3"
   },
   "engines": {
     "node": ">=18"
